--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.0"
+    "@tailwindcss/vite": "^4.1.16",
+    "astro": "^5.15.0",
+    "tailwindcss": "^4.1.16"
   }
 }
